--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -16,5 +16,6 @@ jobs:
       run: pip install cmake-format
     - name: test_cmake_vers
       run: cmake --version
-    - name: run_configuration
-      run: cmake -S. -Bbuild -DCMAKE_INSTALL_PREFIX=install -DCMAKE_C_COMPILER=gcc -DCMAKE_CXX_COMPILER=g++ -GNinja
+    - name: check_folder
+      run: ls;ls ..
+      
