--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -9,11 +9,11 @@ jobs:
 
     steps:
     - name: update
-      run: sudo apt update; sudo apt upgrade
+      run: sudo apt-get update; sudo apt-get upgrade
     - name: install_essentail_deps
-      run: sudo apt-get install -y build-essential python3 cmake doxygen graphviz ninja-build pkgconf 
+      run: sudo apt-get install -y build-essential python3 cmake doxygen graphviz ninja-build pkgconf --fix-missing
     - name: install_gcc_deps
-      run: sudo apt-get install libmpfr-dev libgmp3-dev libmpc-dev -y
+      run: sudo apt-get install libmpfr-dev libgmp3-dev libmpc-dev -y --fix-missing
     - name: install_cmake_format
       run: pip install cmake-format
     - name: git_config
