--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -11,7 +11,7 @@ jobs:
     - name: update
       run: sudo apt update; sudo apt upgrade
     - name: install_essentail_deps
-      run: sudo apt update; sudo apt install build-essential python3 cmake doxygen graphviz ninja-build pkgconf gcc -y
+      run: sudo apt install build-essential python3 cmake doxygen graphviz ninja-build pkgconf gcc -y
     - name: install_cmake_format
       run: pip install cmake-format
     - name: git_config
