--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -26,13 +26,11 @@ jobs:
       run: pip install ninja
     - name: install_graphviz
       run: sudo apt-get install graphviz pkg-config
-    #- name: git_config
-    #  run: git config --global user.name "leducduy520"; git config --global user.email duyleduc123@gmail.com
-    #- name:  git_clone
-    #  run: git clone -v --progress https://github.com/leducduy520/project-template.git
-    - name: run_config
-      run: cmake --preset=u-ninja-gcc
-    #- name: go_to_project-template
-    #  run: cd project-template; ls;export PKG_CONFIG_PATH=$PKG_CONFIG_PATH:$PWD/install/share/pkgconfig; git checkout dev1; git branch; cmake --preset=u-ninja-gcc
+    - name: git_config
+      run: git config --global user.name "leducduy520"; git config --global user.email duyleduc123@gmail.com
+    - name:  git_clone
+      run: git clone -v --progress https://github.com/leducduy520/project-template.git
+    - name: go_to_project-template
+      run: cd project-template; ls;export PKG_CONFIG_PATH=$PKG_CONFIG_PATH:$PWD/install/share/pkgconfig; git checkout dev1; git branch; cmake --preset=u-ninja-gcc
     
       
