--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -4,33 +4,30 @@ on: workflow_dispatch
 
 jobs:
   build:
-
     runs-on: ubuntu-20.04
 
     steps:
-    - name: update
-      run: sudo apt update
-    - name: apt_upgrade
-      run: sudo apt-get upgrade
-    - name: install_gcc
-      run: sudo apt-get install gcc g++ gdb
-    - name: install_cmake
-      run: sudo apt-get install make cmake
-    - name: install_git_doxygen
-      run: sudo apt-get install git doxygen
-    - name: install_python
-      run: sudo apt-get install python3 python3-pip
-    - name: install clang-format
-      run: pip install cmake-format
-    - name: install_ninja
-      run: pip install ninja
-    - name: install_graphviz
-      run: sudo apt-get install graphviz pkg-config
-    - name: git_config
-      run: git config --global user.name "leducduy520"; git config --global user.email duyleduc123@gmail.com
-    - name:  git_clone
-      run: git clone -v --progress https://github.com/leducduy520/project-template.git
-    - name: go_to_project-template
-      run: cd project-template; ls;export PKG_CONFIG_PATH=$PKG_CONFIG_PATH:$PWD/install/share/pkgconfig; git checkout dev1; git branch; cmake --preset=u-ninja-gcc
-    
-      
+      - name: update
+        run: sudo apt update
+      - name: apt_upgrade
+        run: sudo apt-get upgrade
+      - name: install_gcc
+        run: sudo apt-get install gcc g++ gdb
+      - name: install_cmake
+        run: sudo apt-get install make cmake
+      - name: install_git_doxygen
+        run: sudo apt-get install git doxygen
+      - name: install_python
+        run: sudo apt-get install python3 python3-pip
+      - name: install clang-format
+        run: pip install cmake-format
+      - name: install_ninja
+        run: pip install ninja
+      - name: install_graphviz
+        run: sudo apt-get install graphviz pkg-config
+      - name: git_config
+        run: git config --global user.name "leducduy520"; git config --global user.email duyleduc123@gmail.com
+      - name: git_clone
+        run: git clone -v --progress https://github.com/leducduy520/project-template.git
+      - name: go_to_project-template
+        run: cd project-template; ls;export PKG_CONFIG_PATH=$PKG_CONFIG_PATH:$PWD/install/share/pkgconfig; git branch; cmake --preset=u-ninja-gcc
