--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,10 @@ jobs:
   job-one:
     runs-on: ubuntu-22.04
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4.1.2
+      - name: Configure Project
+        uses: threeal/cmake-action@v1.3.0
       - name: test folder
         run: ls
         
