--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4.1.2
       - name: Configure Project
-        uses: threeal/cmake-action@v1.3.0
+        run: cmake --preset=u-ninja-gcc
       - name: test folder
         run: ls
         
