--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4.1.2
       - name: Configure Project
-        run: cmake --preset=u-ninja-gcc
+        uses: threeal/cmake-action@v1.3.0
+        with:
+          generator: Ninja
+          c-compiler: gcc
+          cxx-compiler: g++
       - name: test folder
         run: ls
         
