--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,17 @@ jobs:
   job-one:
     runs-on: ubuntu-22.04
     steps:
+      - name: update & install deps
+        run: |
+          sudo apt update
+          sudo apt-get upgrade
+          sudo apt-get install gcc g++ gdb
+          sudo apt-get install make cmake
+          sudo apt-get install git doxygen
+          sudo apt-get install python3 python3-pip
+          pip install cmake-format
+          pip install ninja
+          sudo apt-get install graphviz pkg-config
       - name: Checkout
         uses: actions/checkout@v4.1.2
       - name: Configure Project
