--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,3 +26,4 @@ jobs:
           args: --preset=u-ninja-gcc --graphviz=docs/graph/graph.dot
           build-args: --preset=u-ninja-gcc-all
           run-build: true
+          run-test: true
