--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,9 +4,10 @@ and_external_catch2()
 
 add_executable(${PROJECT_NAME} test.cpp)
 target_link_libraries(${PROJECT_NAME} PRIVATE base)
+
 find_package(PkgConfig REQUIRED)
 if(PKG_CONFIG_FOUND)
-    load_cache(${EXTERNAL_DIR}/build READ_WITH_PREFIX EXTERNAL_ CATCH2_BINARY_DIR)
+    load_cache(${EXTERNAL_BINARY_DIR} READ_WITH_PREFIX EXTERNAL_ CATCH2_BINARY_DIR)
     load_cache(${EXTERNAL_CATCH2_BINARY_DIR} READ_WITH_PREFIX CATCH2_ PKGCONFIG_INSTALL_DIR)
     load_cache(${EXTERNAL_CATCH2_BINARY_DIR} READ_WITH_PREFIX CATCH2_ CMAKE_INSTALL_PREFIX)
 
@@ -40,13 +41,15 @@ if(PKG_CONFIG_FOUND)
 endif()
 
 if(NOT CATCH2_FOUND)
+    load_cache(${EXTERNAL_CATCH2_BINARY_DIR} READ_WITH_PREFIX EXTERNAL_ CATCH_CMAKE_CONFIG_DESTINATION)
+    message(STATUS "EXTERNAL_CATCH_CMAKE_CONFIG_DESTINATION: ${EXTERNAL_CATCH_CMAKE_CONFIG_DESTINATION}")
     message(STATUS "USE MODULE CONFIG FILE")
-    list(APPEND CMAKE_PREFIX_PATH ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}/cmake/Catch2)
+    list(APPEND CMAKE_PREFIX_PATH ${EXTERNAL_CATCH_CMAKE_CONFIG_DESTINATION})
     find_package(Catch2 REQUIRED)
     target_link_libraries(${PROJECT_NAME} PRIVATE Catch2::Catch2WithMain)
 endif()
 
-load_cache(${EXTERNAL_DIR}/build READ_WITH_PREFIX EXTERNAL_ CATCH2_SOURCE_DIR)
+load_cache(${EXTERNAL_BINARY_DIR} READ_WITH_PREFIX EXTERNAL_ CATCH2_SOURCE_DIR)
 list(APPEND CMAKE_MODULE_PATH ${EXTERNAL_CATCH2_SOURCE_DIR}/extras)
 message(STATUS "CMAKE_MODULE_PATH: ${CMAKE_MODULE_PATH}")
 include(Catch)
