--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - main
+      - merge-*
 jobs:
   config-and-build:
     runs-on: ubuntu-22.04
@@ -23,7 +24,7 @@ jobs:
       - name: Configure Project
         uses: threeal/cmake-action@v1.3.0
         with:
-          args: --preset=u-ninja-gcc --graphviz=docs/graph/graph.dot
-          build-args: --preset=u-ninja-gcc-all
+          args: --preset=ubuntu --graphviz=docs/graph/graph.dot
+          build-args: --preset=ubuntu-all
           run-build: true
           run-test: true
