--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -6,13 +6,26 @@ include(ExternalProject)
 
 set_property(DIRECTORY PROPERTY EP_PREFIX ${CMAKE_SOURCE_DIR})
 
+if(WIN32)
+    set(PRESET windows)
+else()
+    set(PRESET ubuntu)
+endif()
+
+set(PKG_NAME catch2)
+
 ExternalProject_Add(
     catch2
+    PREFIX ${CMAKE_SOURCE_DIR}
+    SOURCE_DIR  ${CMAKE_SOURCE_DIR}/src/${PKG_NAME}
+    BINARY_DIR  ${CMAKE_SOURCE_DIR}/src/${PKG_NAME}-build-${PRESET}
+    STAMP_DIR   ${CMAKE_SOURCE_DIR}/src/${PKG_NAME}-stamp-${PRESET}
+    TMP_DIR     ${CMAKE_SOURCE_DIR}/tmp
     GIT_REPOSITORY https://github.com/leducduy520/Catch2
-    GIT_TAG devel
+    GIT_TAG dev_dld
     GIT_SHALLOW YES
     GIT_PROGRESS YES
-    CMAKE_ARGS "-DCMAKE_INSTALL_PREFIX=${CMAKE_SOURCE_DIR}/../install"
+    CMAKE_ARGS "-DCMAKE_INSTALL_PREFIX=install"
     USES_TERMINAL_DOWNLOAD YES
     USES_TERMINAL_UPDATE YES
     USES_TERMINAL_CONFIGURE YES
