fix path config

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,12 +5,12 @@ and_external_catch2()
 add_executable(${PROJECT_NAME} test.cpp)
 target_link_libraries(${PROJECT_NAME} PRIVATE base)
 
+load_cache(${EXTERNAL_BINARY_DIR} READ_WITH_PREFIX EXTERNAL_ CATCH2_BINARY_DIR)
+load_cache(${EXTERNAL_CATCH2_BINARY_DIR} READ_WITH_PREFIX CATCH2_ PKGCONFIG_INSTALL_DIR)
+load_cache(${EXTERNAL_CATCH2_BINARY_DIR} READ_WITH_PREFIX CATCH2_ CMAKE_INSTALL_PREFIX)
+
 find_package(PkgConfig REQUIRED)
 if(PKG_CONFIG_FOUND)
-    load_cache(${EXTERNAL_BINARY_DIR} READ_WITH_PREFIX EXTERNAL_ CATCH2_BINARY_DIR)
-    load_cache(${EXTERNAL_CATCH2_BINARY_DIR} READ_WITH_PREFIX CATCH2_ PKGCONFIG_INSTALL_DIR)
-    load_cache(${EXTERNAL_CATCH2_BINARY_DIR} READ_WITH_PREFIX CATCH2_ CMAKE_INSTALL_PREFIX)
-
     set(CATCH2_PKGCONFIG_INSTALL_DIR ${CATCH2_CMAKE_INSTALL_PREFIX}/${CATCH2_PKGCONFIG_INSTALL_DIR})
     message(STATUS "CATCH2_PKGCONFIG_INSTALL_DIR: ${CATCH2_PKGCONFIG_INSTALL_DIR}")
     set(ENV{PKG_CONFIG_PATH} ${CATCH2_PKGCONFIG_INSTALL_DIR})
@@ -42,9 +42,9 @@ endif()
 
 if(NOT CATCH2_FOUND)
     load_cache(${EXTERNAL_CATCH2_BINARY_DIR} READ_WITH_PREFIX EXTERNAL_ CATCH_CMAKE_CONFIG_DESTINATION)
-    message(STATUS "EXTERNAL_CATCH_CMAKE_CONFIG_DESTINATION: ${EXTERNAL_CATCH_CMAKE_CONFIG_DESTINATION}")
+    message(STATUS "EXTERNAL_CATCH_CMAKE_CONFIG_DESTINATION: ${CATCH2_CMAKE_INSTALL_PREFIX}/${EXTERNAL_CATCH_CMAKE_CONFIG_DESTINATION}")
     message(STATUS "USE MODULE CONFIG FILE")
-    list(APPEND CMAKE_PREFIX_PATH ${EXTERNAL_CATCH_CMAKE_CONFIG_DESTINATION})
+    list(APPEND CMAKE_PREFIX_PATH ${CATCH2_CMAKE_INSTALL_PREFIX}/${EXTERNAL_CATCH_CMAKE_CONFIG_DESTINATION})
     find_package(Catch2 REQUIRED)
     target_link_libraries(${PROJECT_NAME} PRIVATE Catch2::Catch2WithMain)
 endif()
