--- a/src/base/CMakeLists.txt
+++ b/src/base/CMakeLists.txt
@@ -1,11 +1,10 @@
 project(base_src)
 
-file(
-    GLOB
-    SRC_FILES
-    CONFIGURE_DEPENDS
-    "*.cpp"
-    "*.c"
-    )
+file(GLOB
+     SRC_FILES
+     CONFIGURE_DEPENDS
+     "*.cpp"
+     "*.c"
+     )
 
 add_library(base SHARED ${SRC_FILES})
