--- a/cmake/ExternalCMakeLists.txt.in
+++ b/cmake/ExternalCMakeLists.txt.in
@@ -11,6 +11,7 @@ ExternalProject_Add(
     GIT_TAG @EX_PROJ_BRANCH@
     GIT_SHALLOW YES
     GIT_PROGRESS YES
+    GIT_SUBMODULES_RECURSE YES
     CMAKE_ARGS "-DCMAKE_INSTALL_PREFIX=install"
     USES_TERMINAL_DOWNLOAD YES
     USES_TERMINAL_UPDATE YES
