--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,42 +1,17 @@
 project(Catch-test)
 
-file(READ ${CMAKE_SOURCE_DIR}/deps.json DEPS_JSON_STRING)
+read_deps_json()
 
-string(JSON DEPS_LENGTH LENGTH ${DEPS_JSON_STRING})
-message(STATUS "DEPS_LENGTH ${DEPS_LENGTH}")
-
-foreach(ITR RANGE(${DEPS_LENGTH} - 1))
-       string(JSON
-              PKG_LABEL
-              GET
-              ${DEPS_JSON_STRING}
-              0
-              label
-       )
-       string(JSON
-              PKG_REPO
-              GET
-              ${DEPS_JSON_STRING}
-              0
-              repo
-       )
-       string(JSON
-              PKG_BRANCH
-              GET
-              ${DEPS_JSON_STRING}
-              0
-              branch
-       )
-
-       build_external_project(
-              BRANCH
-              ${PKG_BRANCH}
-              LABEL
-              ${PKG_LABEL}
-              REPO
-              ${PKG_REPO}
-       )
-endforeach()
+build_external_project(
+    BRANCHES
+    ${PKG_BRANCHES}
+    LABELS
+    ${PKG_LABELS}
+    REPOS
+    ${PKG_REPOS}
+    SIZE
+    ${PKG_LAST_INDEX}
+)
 
 add_executable(${PROJECT_NAME} test.cpp)
 target_link_libraries(${PROJECT_NAME} PRIVATE base)
@@ -57,14 +32,14 @@ include(Catch)
 catch_discover_tests(${PROJECT_NAME})
 
 install(TARGETS ${PROJECT_NAME}
-       RUNTIME PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
-       CONFIGURATIONS Debug Release
-       DESTINATION ${CMAKE_INSTALL_BINDIR}
-       COMPONENT Runtime
-       PRIVATE_HEADER PERMISSIONS WORLD_READ OWNER_WRITE
-       DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
-       COMPONENT PrivateHeader
-       PUBLIC_HEADER PERMISSIONS WORLD_READ OWNER_WRITE
-       COMPONENT PublicHeader
-       DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+    RUNTIME PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
+    CONFIGURATIONS Debug Release
+    DESTINATION ${CMAKE_INSTALL_BINDIR}
+    COMPONENT Runtime
+    PRIVATE_HEADER PERMISSIONS WORLD_READ OWNER_WRITE
+    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+    COMPONENT PrivateHeader
+    PUBLIC_HEADER PERMISSIONS WORLD_READ OWNER_WRITE
+    COMPONENT PublicHeader
+    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
 )
