--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -1,7 +1,4 @@
 cmake_minimum_required(VERSION 3.27)
-
 project(external)
-
 include(ExternalProject)
-
-add_subdirectory(catch2)
+add_subdirectory(D:/build/project-template/external/lib)
