--- a/.editorconfig
+++ b/.editorconfig
@@ -20,3 +20,10 @@ trim_trailing_whitespace = false
 indent_style = space
 indent_size = 2
 insert_final_newline = false
+
+{CMakeLists.txt, *.cmake}
+indent_style = space
+indent_size = 4
+trim_trailing_whitespace = false
+insert_final_newline = false
+end_of_line = lf
