--- a/cmake/ExternalCMakeLists.txt.in
+++ b/cmake/ExternalCMakeLists.txt.in
@@ -12,7 +12,7 @@ ExternalProject_Add(
     GIT_SHALLOW YES
     GIT_PROGRESS YES
     GIT_SUBMODULES_RECURSE YES
-    CMAKE_ARGS "-DCMAKE_INSTALL_PREFIX=install"
+    CMAKE_ARGS "-DCMAKE_INSTALL_PREFIX:PATH=@CMAKE_INSTALL_PREFIX@/external" "-DCMAKE_BUILD_TYPE=@CMAKE_BUILD_TYPE@"
     USES_TERMINAL_DOWNLOAD YES
     USES_TERMINAL_UPDATE YES
     USES_TERMINAL_CONFIGURE YES
