--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -16,6 +16,20 @@ build_external_project(
 add_executable(${PROJECT_NAME} test.cpp)
 target_link_libraries(${PROJECT_NAME} PRIVATE base)
 
+load_cache(${EXTERNAL_BINARY_DIR} READ_WITH_PREFIX EXTERNAL_ SOCKETIO_BINARY_DIR)
+load_cache(${EXTERNAL_BINARY_DIR} READ_WITH_PREFIX EXTERNAL_ SOCKETIO_SOURCE_DIR)
+load_cache(${EXTERNAL_BINARY_DIR} READ_WITH_PREFIX EXTERNAL_ SOCKETIO_INSTALL_PREFIX)
+
+list(APPEND CMAKE_PREFIX_PATH ${EXTERNAL_SOCKETIO_INSTALL_PREFIX}/${CATCH2_CATCH_CMAKE_CONFIG_DESTINATION})
+find_package(sioclient REQUIRED)
+
+# add_library(SocketIO STATIC IMPORTED)
+# set_target_properties(
+# SocketIO PROPERTIES IMPORTED_LOCATION ${EXTERNAL_SOCKETIO_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR}/libsioclient.a
+# INTERFACE_INCLUDE_DIRECTORIES ${EXTERNAL_SOCKETIO_INSTALL_PREFIX}/${CMAKE_INSTALL_INCLUDEDIR}
+# )
+target_link_libraries(${PROJECT_NAME} PRIVATE sioclient::sioclient)
+
 load_cache(${EXTERNAL_BINARY_DIR} READ_WITH_PREFIX EXTERNAL_ CATCH2_BINARY_DIR)
 load_cache(${EXTERNAL_BINARY_DIR} READ_WITH_PREFIX EXTERNAL_ CATCH2_SOURCE_DIR)
 load_cache(${EXTERNAL_BINARY_DIR} READ_WITH_PREFIX EXTERNAL_ CATCH2_INSTALL_PREFIX)
