--- a/cmake/ExternalCMakeLists.txt.in
+++ b/cmake/ExternalCMakeLists.txt.in
@@ -3,10 +3,10 @@ project(@EX_PROJ_LABEL@)
 ExternalProject_Add(
     ${PROJECT_NAME}
     PREFIX ${CMAKE_CURRENT_BINARY_DIR}
-    SOURCE_DIR  ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-src
-    BINARY_DIR  ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-build-${PRESET}
-    STAMP_DIR   ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-stamp-${PRESET}
-    TMP_DIR     ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-tmp
+    SOURCE_DIR  ${CMAKE_CURRENT_BINARY_DIR}/src
+    BINARY_DIR  ${CMAKE_CURRENT_BINARY_DIR}/build
+    STAMP_DIR   ${CMAKE_CURRENT_BINARY_DIR}/stamp
+    TMP_DIR     ${CMAKE_CURRENT_BINARY_DIR}/tmp
     GIT_REPOSITORY @EX_PROJ_REPO@
     GIT_TAG @EX_PROJ_BRANCH@
     GIT_SHALLOW YES
@@ -24,8 +24,8 @@ string(TOUPPER ${PROJECT_NAME} PROJECT_NAME_UPPER)
 
 ExternalProject_Get_Property(${PROJECT_NAME} SOURCE_DIR)
 set(${PROJECT_NAME_UPPER}_SOURCE_DIR
-${SOURCE_DIR}
-CACHE PATH "${PROJECT_NAME_UPPER}_SOURCE_DIR"
+    ${SOURCE_DIR}
+    CACHE PATH "${PROJECT_NAME_UPPER}_SOURCE_DIR"
 )
 
 ExternalProject_Get_Property(${PROJECT_NAME} BINARY_DIR)
@@ -35,6 +35,6 @@ set(${PROJECT_NAME_UPPER}_BINARY_DIR
 )
 
 set(${PROJECT_NAME_UPPER}_INSTALL_PREFIX
-${${PROJECT_NAME_UPPER}_BINARY_DIR}/install
-CACHE PATH "${PROJECT_NAME_UPPER}_INSTALL_PREFIX"
+    @CMAKE_INSTALL_PREFIX@/external
+    CACHE PATH "${PROJECT_NAME_UPPER}_INSTALL_PREFIX"
 )
